--- a/templates/concerts/showConcert.html.twig
+++ b/templates/concerts/showConcert.html.twig
@@ -1,68 +1,80 @@
+{% if concert.price == 0 %}
+    {% set price = "Gratuit" %}
+{% else %}
+    {% set price = concert.price %}
+{% endif %}
+
 {% extends 'base.html.twig' %}
 
 {% block body %}
 
 <section>
-    {% if app.user.id == concert.organizer.id  %}
+    {% if app.user and app.user.id == concert.organizer.id and concert.status == "À venir" %}
         {% set submittedToken = csrf_token('concert-organizer') %}
         <p><a href="{{ path('editConcert', {'id': concert.id, 'submittedToken': submittedToken}) }}"><input type="button" value="Modifier les informations"></a>
         <a href="{{ path('changeConcertDate', {'id': concert.id, 'submittedToken': submittedToken}) }}"><input type="button" value="Reporter cet événement"></a>
-        <input type="button" value="Annuler cet événement"></p>
+        <a href="{{ path('confirmCancelConcert', {'id': concert.id, 'submittedToken': submittedToken}) }}"><input type="button" value="Annuler cet événement"></a></p>
     {% endif %}
     
     <p>Organisé par {{ concert.organizer.email }}</p>
 
     <p>{{ concert.description }}</p>
 
-    <p>Date : {{ concert.date | date('d/m/Y') }} à {{ concert.date | date('h:i', 'Europe/Paris') }}</p>
+    {% if concert.status != "Annulé" %}
 
-    <p>Prix : {{ concert.price }}€ </p>
-    
-    {% if remainingPlaces != 0 %}
-        <p><strong>{{ remainingPlaces }}</strong>
-        {% if remainingPlaces > 1 %}places restantes 
-        {% elseif remainingPlaces == 1 %}place restante{% endif %}
-        </p>
-    {% else %}{% endif %}
+        <p>Date : {{ concert.date | date('d/m/Y') }} à {{ concert.date | date('h:i', 'Europe/Paris') }}</p>
 
-
-</section>
-
-<section>
-    <h2>Réservations</h2>
-
-    {% if notEnoughPlaces != NULL %}
-        <strong><p>{{ notEnoughPlaces }}</strong></p>
-    {% endif %}
-
-        {% if concert.date > date() %}
-            {% if concert.maxPlaces > concert.reservation  %}
-                {% if app.user %}
-                    {{ form_start(reservationForm) }}
-                        <p>{{ form_errors(reservationForm)}}
-                        <p>{{ form_row(reservationForm.reservedPlaces, {
-                            'required': 'true',
-                            'label': 'Nombre de places : ',
-                            'attr': {
-                                'placeholder': "Nombre de places",
-                                'min': 1, 
-                                'max': ' ',
-                                } 
-                            })
-                        }}</p>
-                            <input type="submit" value="Réserver">
-                    {{ form_end(reservationForm) }}
-                {% else %}
-                    <p>Veuillez vous connecter pour réserver</p>
-                    <a href="{{ path("login") }}">Connexion</a>
-                {% endif %}
-            {% else %}
-                <p><strong>Il n'y a plus de place disponible pour ce concert.</strong></p>
+        <p>Prix : {{ price }}{% if price != "Gratuit" %}€{% endif %}</p>
+        
+        {% if remainingPlaces != 0 %}
+            <p><strong>{{ remainingPlaces }}</strong>
+            {% if remainingPlaces > 1 %}
+                places restantes 
+            {% elseif remainingPlaces == 1 %}
+                place restante
             {% endif %}
-        {% else %}
-            <p>Les réservations pour cet événément sont closes.</p>
+            </p>
+        {% endif %}
+    </section> {# END CONCERT INFOS #}
+
+    <section>
+        <h2>Réservations</h2>
+
+        {% if notEnoughPlaces != NULL %}
+            <strong><p>{{ notEnoughPlaces }}</strong></p>
         {% endif %}
 
-</section>
+            {% if concert.date > date()  %}
+                {% if concert.maxPlaces > concert.reservation  %}
+                    {% if app.user %}
+                        {{ form_start(reservationForm) }}
+                            <p>{{ form_errors(reservationForm)}}
+                            <p>{{ form_row(reservationForm.reservedPlaces, {
+                                'required': 'true',
+                                'label': 'Nombre de places : ',
+                                'attr': {
+                                    'placeholder': "Nombre de places",
+                                    'min': 1, 
+                                    'max': ' ',
+                                    } 
+                                })
+                            }}</p>
+                                <input type="submit" value="Réserver">
+                        {{ form_end(reservationForm) }}
+                    {% else %}
+                        <p>Veuillez vous connecter pour réserver<br />
+                        <a href="{{ path("login") }}">Connexion</a></p>
+                    {% endif %}
+                {% else %}
+                    <p><strong>Il n'y a plus de place disponible pour ce concert.</strong></p>
+                {% endif %}
+            {% else %}
+                <p>Les réservations pour cet événément sont closes.</p>
+            {% endif %}
+    </section> {# END RESERVATIONS SECTION #}
+    
+    {% else %}
+        <h3><strong>Cet événément est annulé</strong></h3>
+    {% endif %}
 
 {% endblock %}
