--- a/templates/errors/test.html.twig
+++ b/templates/errors/test.html.twig
@@ -1,1 +1,12 @@
-{{ test }}
+{% extends "base.html.twig" %}
+
+{% set title = "test" %}
+
+{% block body %}
+
+<ul>
+    <li> {{ test }}</li>
+    <li> {{ test2 }}</li>
+</ul>
+
+{% endblock %}
