--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -15,7 +15,7 @@
                     } 
                 }) 
             }}</p>
-            {{ form_row(registerForm.password, { 
+            <p>{{ form_row(registerForm.password, { 
                 'required': 'true', 
                 'label': 'Mot de passe : ', 
                 'attr': {
