--- a/templates/concerts/changeConcertDate.html.twig
+++ b/templates/concerts/changeConcertDate.html.twig
@@ -2,18 +2,19 @@
 
 {% block body %}
 
- <h3>{{concert.name}} - <em>{{concert.date | date('d/m/Y à h:i')}}</em></h3>
+ <div class="main">
+    <h3>{{concert.name}} - <em>{{concert.date | date('d/m/Y à h:i')}}</em></h3>
 
- {{ form_start(newDateForm) }}
-    <p>{{ form_row(newDateForm.date, {
-        'required': 'true',
-        'label': 'Changer la date : ',
-    }) }}</p>
-    
-    <p><a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" value="Retour"></a>
-    <input type="submit" value="Confirmer">
+    {{ form_start(newDateForm) }}
+        <p>{{ form_row(newDateForm.date, {
+            'required': 'true',
+            'label': 'Changer la date : ',
+        }) }}</p>
+        
+        <p><a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" value="Retour"></a>
+        <input type="submit" value="Confirmer">
 
- {{ form_end(newDateForm) }} 
-
+    {{ form_end(newDateForm) }} 
+ </div>
 
 {% endblock %}
