--- a/templates/concerts/concertsList.html.twig
+++ b/templates/concerts/concertsList.html.twig
@@ -2,40 +2,65 @@
 
 {% block body %}
 
-<section>
+  <div class="events-list-block main">
+    <section>
+      <div class="search-event-block">
+        <div class="title">
+          <h2>Trouvez un événement près de chez vous !</h2>
+        </div>
+        <div class="search-event-block__form">
+          <p>{{ form_start(concertsSearchForm) }}
+            {{ form_errors(concertsSearchForm) }}
+            {{ form_row(concertsSearchForm.concertsQuery, {
+                'required': 'true',
+                'label': ' ',
+                'attr': {
+                  'placeholder': "Rechercher par ville ou par nom d'événement..."
+                }
+              }) 
+            }}
+            <i class="fas fa-search"></i>
 
-  <p>{{ form_start(concertsSearchForm) }}
-    {{ form_errors(concertsSearchForm) }}
-    {{ form_row(concertsSearchForm.concertsQuery, {
-        'required': 'true',
-        'label': ' ',
-        'attr': {
-          'placeholder': "Rerchercher par ville ou par nom"
-        }
-      }) 
-    }}
-    <input type="submit" value="Rechercher">
-    {% if query %}
-      <a href="{{ path('concertsList') }}"><input type="button" value="Retour"></a>
-    {% endif %}
-  {{ form_end(concertsSearchForm) }}</p>
-</section>
+          {{ form_end(concertsSearchForm) }}</p>
+        </div>
+      </div>
+    </section>
 
-<section>
-  {% if concerts %}
-    {% for concert in concerts %}  
-      <a href="{{ path('showConcert', {'id' : concert.id}) }}"><p>{{ concert.id }} - {{ concert.name }} - {{ concert.date | date('d/m/Y') }} - {{ concert.city }} - {{ concert.price }}€</a>
-      {% if concert.reservation >= concert.maxPlaces %}
-        <strong>| COMPLET</strong> 
+    <section>
+      {% if query %}
+        <div class="all-events">
+          {% if concerts %}
+            {% for concert in concerts %} 
+              <div class="each-event">
+                {% if concert.imagePath %}
+                  <div class="each-event__image">
+                    <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
+                    <img src="/images/concerts_img/{{concert.imagePath}}" alt="{{concert.name}}" width="200">
+                    </a>
+                  </div>
+                {% endif %}
+                <div class="each-event-content">
+                  <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
+                  <div class="each-event-content__ title">
+                    <h2>{{ concert.name }}</h2>
+                    <div class="each-event-content__ title--line"></div>
+                  </div>
+                  {% if concert.reservation >= concert.maxPlaces %}
+                      <div id="full-reservations"><p><span id="full-reservations">COMPLET</span></p></div>
+                  {% endif %}
+                  <div class="each-event-content___infos"></div>
+                  <p>Date : {{ concert.date | date('d/m/Y') }}</p>
+                  <p>Lieu : {{ concert.adress }}, {{ concert.city }}</p>
+                  </a>
+                </div>
+              </div>
+            {% endfor %}
+          {% else %}
+            <p>Il n'y a aucun concert prévu</p>
+          {% endif %}
+        </div>
       {% endif %}
-      </p>
-    {% endfor %}
-    {% if query == false %}
-      {{ knp_pagination_render(concerts) }}
-    {% endif %}
-  {% else %}
-    <p>Il n'y a aucun concert prévu</p>
-  {% endif %}
-</section>
+    </section>
+  </div>
 
 {% endblock %}
