--- a/templates/concerts/showConcert.html.twig
+++ b/templates/concerts/showConcert.html.twig
@@ -1,85 +1,103 @@
+{% extends 'base.html.twig' %}
+{# VARIABLES SET #}
 {% if concert.price == 0 %}
     {% set price = "Gratuit" %}
 {% else %}
     {% set price = concert.price %}
 {% endif %}
 
-{% extends 'base.html.twig' %}
-
 {% block body %}
-
-    {% for message in app.flashes('wrongPassword') %}
-        <strong>{{ message }}</strong>
-    {% endfor %}</p>
-
-
-<section>
-    {% if app.user and app.user.id == concert.organizer.id and concert.status == "À venir" %}
-        {% set organizerToken = csrf_token('concert-organizer') %}
-        <p><a href="{{ path('editConcert', {'id': concert.id, 'organizerToken': organizerToken}) }}"><input type="button" value="Modifier les informations"></a>
-        <a href="{{ path('changeConcertDate', {'id': concert.id, 'organizerToken': organizerToken}) }}"><input type="button" value="Reporter cet événement"></a>
-        <a href="{{ path('confirmCancelConcert', {'id': concert.id, 'organizerToken': organizerToken}) }}"><input type="button" value="Annuler cet événement"></a></p>
-    {% endif %}
     
-    <p>Organisé par {{ concert.organizer.email }}</p>
-
-    <p>{{ concert.description }}</p>
-
-    {% if concert.status != "Annulé" %}
-
-        <p>Date : {{ concert.date | date('d-m-Y h:i:s') }} à {{ concert.date | date('h:i', 'Europe/Paris') }}</p>
-
-        <p>Prix : {{ price }}{% if price != "Gratuit" %}€{% endif %}</p>
-        
-        {% if remainingPlaces != 0 %}
-            <p><strong>{{ remainingPlaces }}</strong>
-            {% if remainingPlaces > 1 %}
-                places restantes 
-            {% elseif remainingPlaces == 1 %}
-                place restante
+    <div class="event-content">
+        <div class="event-description">
+            {% if app.user and app.user.id == concert.organizer.id and concert.status == "À venir" %}
+                <div class="btn-block">
+                    {% set organizerToken = csrf_token('concert-organizer') %}
+                    <p><a href="{{ path('editConcert', {'id': concert.id, 'organizerToken': organizerToken}) }}"><input type="button" class="btn" value="Modifier les informations"></a>
+                    <a href="{{ path('changeConcertDate', {'id': concert.id, 'organizerToken': organizerToken}) }}"><input type="button" class="btn" value="Reporter cet événement"></a>
+                    <a href="{{ path('confirmCancelConcert', {'id': concert.id, 'organizerToken': organizerToken}) }}"><input type="button" class="btn" value="Annuler cet événement"></a></p>
+                </div>
             {% endif %}
-            </p>
-        {% endif %}
-    </section> {# END CONCERT INFOS #}
+            <div class="title">
+                {{ concert.name }}
+                <div class="title--line"></div>
+            </div>
+            <p>Organisé par {{ concert.organizer.email }}</p>
 
-    <section>
-        <h2>Réservations</h2>
+            {% if concert.imagePath %}
+                <img src="/images/concerts_img/{{concert.imagePath}}" alt="{{concert.name}}" width="300">
+            {% endif %}
 
-        {% if notEnoughPlaces != NULL %}
-            <strong><p>{{ notEnoughPlaces }}</strong></p>
-        {% endif %}
+            <p>{{ concert.description }}</p>
+        </div>
 
-            {% if concert.date > date()  %}
-                {% if concert.maxPlaces > concert.reservation  %}
-                    {% if app.user %}
-                        {{ form_start(reservationForm) }}
-                            <p>{{ form_errors(reservationForm)}}
-                            <p>{{ form_row(reservationForm.reservedPlaces, {
-                                'required': 'true',
-                                'label': 'Nombre de places : ',
-                                'attr': {
-                                    'placeholder': "Nombre de places",
-                                    'min': 1, 
-                                    'max': ' ',
-                                    } 
-                                })
-                            }}</p>
-                                <input type="submit" value="Réserver">
-                        {{ form_end(reservationForm) }}
-                    {% else %}
-                        <p>Veuillez vous connecter pour réserver<br />
-                        <a href="{{ path("login") }}">Connexion</a></p>
-                    {% endif %}
-                {% else %}
-                    <p><strong>Il n'y a plus de place disponible pour ce concert.</strong></p>
-                {% endif %}
+        <div class="event-sides-block">
+            {% if concert.status != "Annulé" %}
+                <div class="event-side-block event-infos">
+                    <div class="event-side-block__text">
+                        <div class="title">
+                            <h2>Informations</h2>
+                            <div class="title--line"></div>
+                        </div>
+                            <p>Date : {{ concert.date | date('d-m-Y h:i:s') }} à {{ concert.date | date('h:i', 'Europe/Paris') }}</p>
+                            <p>Lieu : {{ concert.adress }} à {{ concert.city }}</p>
+                            <p>Prix : {{ price }}{% if price != "Gratuit" %}€{% endif %}</p>
+                            {% if concert.date > date()  %}
+                                {% if remainingPlaces != 0 %}
+                                    <p><strong>{{ remainingPlaces }}</strong>
+                                    {% if remainingPlaces > 1 %}
+                                        places restantes 
+                                    {% elseif remainingPlaces == 1 %}
+                                        place restante
+                                    {% endif %}
+                                    </p>
+                                {% endif %}
+                            {% endif %}
+                        </div>
+                    </div> {# END CONCERT INFOS #}
+
+                    <div class="event-side-block event-reservations">
+                    <div class="event-side-block__text">
+                        <div class="title">
+                            <h2>Réservations</h2>
+                            <div class="title--line"></div>
+                        </div>
+                        {% if notEnoughPlaces != NULL %}
+                            <strong><p>{{ notEnoughPlaces }}</strong></p>
+                        {% endif %}
+                        {% if concert.date > date()  %}
+                            {% if concert.maxPlaces > concert.reservation  %}
+                                {% if app.user %}
+                                    {{ form_start(reservationForm) }}
+                                        <p>{{ form_errors(reservationForm)}}
+                                        <p>{{ form_row(reservationForm.reservedPlaces, {
+                                            'required': 'true',
+                                            'label': 'Nombre de places : ',
+                                            'attr': {
+                                                'min': 1, 
+                                                } 
+                                            })
+                                        }}</p>
+                                        <div class="btn-block">
+                                            <input type="submit" class="btn" value="Réserver">
+                                        </div>
+                                    {{ form_end(reservationForm) }}
+                                {% else %}
+                                    <p>Veuillez vous connecter pour réserver<br />
+                                    <a href="{{ path("login") }}">Connexion</a></p>
+                                {% endif %}
+                            {% else %}
+                                <p><strong>Il n'y a plus de place disponible pour ce concert.</strong></p>
+                            {% endif %}
+                        {% else %}
+                            <p>Les réservations pour cet événément sont closes.</p>
+                        {% endif %}
+                    </div>
+                    </div>
             {% else %}
-                <p>Les réservations pour cet événément sont closes.</p>
+                <h3><strong>Cet événément est annulé</strong></h3>
+            {# END CONCERT INFOS #}
             {% endif %}
-    </section> {# END RESERVATIONS SECTION #}
-    
-    {% else %}
-        <h3><strong>Cet événément est annulé</strong></h3>
-    {% endif %}
-
+        </div>
+    </div>
 {% endblock %}
